--- a/harmadik.html
+++ b/harmadik.html
@@ -1,31 +1,26 @@
 <!DOCTYPE html>
-<html lang="hu">
-
+<html lang="en">
 <head>
-    <title>Hőerőmű|Előnyök és hátrányok</title>
-    <meta name="description" content="">
-    <meta name="keywords" content="">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <meta name="description" content="Természet órára prezentációban bemutatásra kerülnek a hőerőművek">
+    <meta name="keywords" content="Hőerőmű, hőerőművek">
+    <title>Hőerőmű</title>
 </head>
-
 <body>
-    <header>
-        <h1>Hőerőmű</h1>
-        <h2>Előnyök és hátrányok</h2>
-    </header>
-    <nav>
-        <a href=""></a>
-        <a href=""></a>
-    </nav>
-    <article>
+    <main>
+        <header>
 
-    </article>
-    <footer>
-        <p>Környezet projektmunka|Hőerőmű</p>
-        <p>Készítette: Kedves Balázs és Holik Bálint</p>
-    </footer>
+        </header>
+        <nav>
+
+        </nav>
+        <article>
+            <div> </div>
+            <div> </div>
+        </article>
+        <footer>
+            <p>A weboldalt készítette: Holik Bálint és Kedves Balázs</p>
+        </footer>
+    </main>
 </body>
-
 </html>
