--- a/harmadik.html
+++ b/harmadik.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="description" content="Természet órára prezentációban bemutatásra kerülnek a hőerőművek">
     <meta name="keywords" content="Hőerőmű, hőerőművek">
+    <link rel="stylesheet" href="stilus.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Hőerőmű</title>
 </head>
 <body>
@@ -12,11 +14,12 @@
 
         </header>
         <nav>
-
+            <a href="index.html">Főoldal</a>
+            <a href="masik.html">Főbb részei</a>
+            <a href="harmadik.html">Előnyök és hátrányok</a>
         </nav>
-        <article>
-            <div> </div>
-            <div> </div>
+        <article class="bevezeto">
+            <h2>Ebben a fejezetben megtudod, hogy mik a hőerőművek előnyei és hátrányai</h2>
         </article>
         <footer>
             <p>A weboldalt készítette: Holik Bálint és Kedves Balázs</p>
