--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </header>
         <nav>
             <a href="masik.html">Főbb részei</a>
-            <a href="">Előnyök és Hátrányok</a>
+            <a href="harmadik.html">Előnyök és Hátrányok</a>
         </nav>
         <article class="bevezeto">
             <h2>Ebben a fejezetben: Megismerkedhetsz, hogy mi az a Hőerőmű és a működése fő lépéseit!</h2>
