--- a/masik.html
+++ b/masik.html
@@ -13,7 +13,7 @@
         </header>
         <nav>
             <a href="index.html">Ugrás a főoldalra</a>
-            <a href="">Előnyök és Hátrányok</a>
+            <a href="harmadik.html">Előnyök és Hátrányok</a>
         </nav>
         <article class="bevezeto">
             <h2>Ebben a fejezetben: Megismered a hőerőművek működését, típusait</h2>
