--- a/index.html
+++ b/index.html
@@ -1,29 +1,85 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="hu">
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="description" content="Természet órára prezentációban bemutatásra kerülnek a hőerőművek">
-    <meta name="keywords" content="Hőerőmű, hőerőművek">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <meta
+      name="description"
+      content="Természet órára prezentációban bemutatásra kerülnek a hőerőművek"
+    />
+    <meta name="keywords" content="Hőerőmű, hőerőművek" />
     <title>Hőerőmű</title>
-</head>
-<body>
+    <link rel="stylesheet" href="stilus.css" />
+  </head>
+  <body>
     <main>
-        <header>
-            <h1>Hőerőművek</h1>
-        </header>
-        <nav>
-            <a href="masik.html">Főbb részei</a>
-            <a href="harmadik.html">Előnyök és Hátrányok</a>
-        </nav>
-        <article class="bevezeto">
-            <h2>Ebben a fejezetben: Megismerkedhetsz, hogy mi az a Hőerőmű és a működése fő lépéseit!</h2>
-        </article>
-        <article>
-            <div></div>
-        </article>
-        <footer>
-            <p>A weboldalt készítette: Holik Bálint és Kedves Balázs</p>
-        </footer>
+      <header>
+        <h1>Hőerőművek</h1>
+      </header>
+      <nav>
+        <a href="masik.html">Működése</a>
+        <a href="harmadik.html">Előnyök és Hátrányok</a>
+      </nav>
+      <article class="bevezeto">
+        <h2>
+          Ebben a fejezetben: Megismerkedhetsz, hogy mi az a Hőerőmű és a
+          működése fő lépéseit!
+        </h2>
+      </article>
+      <article>
+        <p>
+          A hőerőmű olyan létesítmény, amely tüzelőanyagok (például szén, gáz,
+          biomassza) elégetésével nyert hőenergiát alakít át villamos energiává.
+          A folyamat alapja az úgynevezett Rankine-ciklus, amely egy zárt
+          körfolyamat.
+        </p>
+        <h3>Működés fő lépései:</h3>
+        <ol>
+          <li>
+            Tüzelés és gőzfejlesztés: A kazánban elégetik a tüzelőanyagot, a
+            felszabaduló hő pedig a csővezetékekben keringő vizet nagy nyomású,
+            forró gőzzé alakítja.
+          </li>
+          <li>
+            Turbina hajtása: A gőzt a turbina lapátjaira vezetik, ahol a gőz
+            tágulása közben megforgatja a turbina tengelyét. Ekkor a hőenergia
+            mechanikai energiává alakul.
+          </li>
+          <li>
+            Áramtermelés: A turbinához kapcsolt generátor a forgómozgást – az
+            elektromágneses indukció elvén – villamos energiává alakítja,
+            amelyet aztán a hálózatba táplálnak.
+          </li>
+          <li>
+            Lecsapódás (Kondenzáció): A turbinából kilépő fáradt gőzt egy
+            kondenzátorban hűtővíz segítségével újra folyékony vízzé alakítják.
+          </li>
+          <li>
+            Visszatáplálás: A lecsapatott vizet szivattyúk segítségével
+            visszajuttatják a kazánba, így a folyamat elölről kezdődik.
+          </li>
+        </ol>
+        <img src="kepek/hőerőmű.jpg" alt="Hőerőmű képe">
+        <h3>Felhasznált források:</h3>
+        <a href="https://www.vilaglex.hu/Lexikon/Html/Hoeromu.htm"
+          >Hőerőmű - vilaglex Kislexikon</a
+        >
+        <br />
+        <a href="https://hu.wikipedia.org/wiki/H%C5%91er%C5%91m%C5%B1"
+          >Hőerőmű - Wikipédia</a
+        >
+        <br />
+        <a
+          href="https://www.steamaxenergyindia.com/what-are-thermal-power-plants/"
+          >Thermal Power Plant Working Principle - Steamax Energy</a
+        >
+        <a
+          href="https://tudasbazis.sulinet.hu/hu/termeszettudomanyok/termeszetismeret/ember-a-termeszetben-6-osztaly/meg-mindig-ipar-az-eromuvek/a-hoeromu"
+          >Az erőművek működése - Sulinet Tudásbázis</a
+        >
+      </article>
+      <footer>
+        <p>A weboldalt készítette: Holik Bálint és Kedves Balázs</p>
+      </footer>
     </main>
-</body>
+  </body>
 </html>
