--- a/masik.html
+++ b/masik.html
@@ -1,26 +1,133 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="hu">
-<head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-    <meta name="description" content="Természet órára prezentációban bemutatásra kerülnek a hőerőművek">
-    <meta name="keywords" content="Hőerőmű, hőerőművek">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+    <meta
+      name="description"
+      content="Természet órára prezentációban bemutatásra kerülnek a hőerőművek"
+    />
+    <meta name="keywords" content="Hőerőmű, hőerőművek" />
     <title>Hőerőmű</title>
-</head>
-<body>
+    <link rel="stylesheet" href="stilus.css" />
+  </head>
+  <body>
     <main>
-        <header>
-            <h1>Hőerőművek</h1>
-        </header>
-        <nav>
-            <a href="index.html">Ugrás a főoldalra</a>
-            <a href="harmadik.html">Előnyök és Hátrányok</a>
-        </nav>
-        <article class="bevezeto">
-            <h2>Ebben a fejezetben: Megismered a hőerőművek működését, típusait</h2>
-        </article>
-        <footer>
-            <p>A weboldalt készítette: Holik Bálint és Kedves Balázs</p>
-        </footer>
+      <header>
+        <h1>Hőerőművek működése</h1>
+      </header>
+      <nav>
+        <a href="index.html">Ugrás a főoldalra</a>
+        <a href="harmadik.html">Előnyök és Hátrányok</a>
+      </nav>
+      <article class="bevezeto">
+        <h2>
+          Ebben a fejezetben: Megismered a hőerőművek működését, típusait és
+          felépítését
+        </h2>
+        <h3>Felépítése</h3>
+        <div class="kep">
+          <img src="kepek/Hőerőmű feléptése.jpg" alt="Széntüzelésű hőerőmű" />
+        </div>
+        <p>
+          <em><strong>Egy széntüzelésű hőerőmű képe</strong></em>
+        </p>
+        <p>Fő egységek és folyamatok az ábra alapján:</p>
+        <ul>
+          <li>
+            Tüzelés és gőzfejlesztés: A folyamat a szénszállítással (14) és
+            annak malmokban (16) történő porításával kezdődik. A porított szenet
+            a kazán (17) égésterébe fújják, ahol elégetik. A keletkező hő a
+            kazándobban (18) lévő vizet gőzzé alakítja, amit a túlhevítő (19)
+            tovább hevít.
+          </li>
+          <li>
+            Munkavégzés és áramtermelés: A nagy nyomású gőz a gőzturbinákra
+            kerül, amelyek jellemzően nagy- (11), közepes- (9) és kisnyomású (6)
+            fokozatokból állnak. A gőz megforgatja a turbina tengelyét, ami
+            meghajtja az elektromos generátort (5), így jön létre a villamos
+            energia.
+          </li>
+          <li>
+            Hűtés és vízkör: A turbinából kilépő fáradt gőzt a kondenzátorban
+            (8) hűtővíz segítségével újra vízzé csapatják le. A felmelegedett
+            hűtővizet a hűtőtoronyban (1) hűtik vissza a környezeti levegővel. A
+            lecsapódott tápvizet szivattyúk (2, 7) juttatják vissza a kazánba.
+          </li>
+          <li>
+            Füstgázkezelés: Az égés során keletkező füstgázt ventilátorok
+            mozgatják, és porszűrőkön/pernyeleválasztón (24) keresztül
+            tisztítják meg, mielőtt a kéményen (25) keresztül távozna.
+          </li>
+          <li>
+            Hálózati csatlakozás: A generátor által termelt áramot egy
+            transzformátor (4) alakítja át a távvezetékekhez (3) szükséges
+            feszültségre.
+          </li>
+        </ul>
+        <div class="kep">
+          <img
+            src="kepek/Hőerőmű feléptése2.jpg"
+            alt="hőerőmű egyszerűsített működési sémája"
+          />
+        </div>
+        <p>Egy hőerőmű egyszerűsített működési sémája</p>
+        <p>
+          <em><strong>Az ábra alapján a folyamat lépésről lépésre:</strong></em>
+        </p>
+        <ol>
+          <li>
+            Tüzelés: Alul a láng jelképezi a tüzelőanyag (szén, gáz, fa stb.)
+            elégetését.
+          </li>
+          <li>
+            Kazán: A hő hatására a víz (zöld rész) felforr és nagy nyomású gőz
+            (piros rész) keletkezik.
+          </li>
+          <li>
+            Turbina: A gőz a turbinába áramlik, ahol a tágulása közben
+            megforgatja a turbina lapátjait. Itt a hőenergia forgási
+            (mechanikai) energiává alakul.
+          </li>
+          <li>
+            Generátor: A turbina tengelye megforgatja a generátort, amely az
+            elektromágneses indukció elvén elektromos áramot termel. Ez jut el a
+            távvezetéken (villanyoszlop) a felhasználókhoz.
+          </li>
+          <li>
+            Kondenzátor: A turbinából kilépő fáradt gőzt a hűtővíz (világoskék
+            körfolyamat) lehűti, így az ismét vízzé csapódik le.
+          </li>
+          <li>
+            Visszatáplálás: A lecsapódott víz visszakerül a kazánba, és a
+            körfolyamat kezdődik elölről.
+          </li>
+        </ol>
+        <h3><strong>A hőerőművek típusai tüzelőanyag szerint:</strong></h3>
+        <ul>
+          <li>
+            <strong>Fosszilis tüzelésű erőművek:</strong> Ezek a legelterjedtebbek. Szénnel,
+            földgázzal vagy kőolajjal üzemelnek. A Wikipédia szócikke részletezi
+            a szénportüzelésű és a gázturbinás rendszerek közötti különbséget.
+          </li>
+          <li>
+            <strong>Biomassza erőművek:</strong> Megújuló energiaforrást, például fás szárú
+            növényeket, mezőgazdasági hulladékot vagy pelletet égetnek el.
+          </li>
+          <li>
+            <strong>Hulladékégető művek:</strong> A kommunális hulladék elégetésekor keletkező
+            hőt hasznosítják áramtermelésre (például a budapesti Fővárosi
+            Hulladékhasznosító Műben).
+          </li>
+          <li>
+            <strong>Atomerőművek:</strong> Bár gyakran külön kategóriaként kezeljük őket,
+            technikailag ezek is hőerőművek, mert a hőt nem égetéssel, hanem
+            maghasadással állítják elő a gőz fejlesztéséhez.
+          </li>
+        </ul>
+      </article>
+      <footer>
+        <p>A weboldalt készítette: Holik Bálint és Kedves Balázs</p>
+      </footer>
     </main>
-</body>
+  </body>
 </html>
