harmadik.html tartalom

--- a/harmadik.html
+++ b/harmadik.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="hu">
+
 <head>
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="description" content="Természet órára prezentációban bemutatásra kerülnek a hőerőművek">
@@ -8,6 +9,7 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Hőerőmű</title>
 </head>
+
 <body>
     <main>
         <header>
@@ -15,15 +17,54 @@
         </header>
         <nav>
             <a href="index.html">Főoldal</a>
-            <a href="masik.html">Főbb részei</a>
+            <a href="masik.html">Működése</a>
             <a href="harmadik.html">Előnyök és hátrányok</a>
         </nav>
         <article class="bevezeto">
             <h2>Ebben a fejezetben megtudod, hogy mik a hőerőművek előnyei és hátrányai</h2>
+        </article>
+        <article>
+            <div>
+                <p id="bevezetoszoveg">Az erőművek nagyon nagy része hőerőmű. Bár nagyon sok előnye van az ilyen típusú
+                    áramfejlesztő
+                    üzemeknek, de nagyon sok hátránya is van. Most megtudhatod, hogy mik a pozitív és a negatív
+                    tulajdonságai.</p>
+                <div id="pozitivlista">
+                    <h3>Pozitív tulajdonságai:</h3>
+                    <dl>
+                        <dt>Nem függ a környezettől</dt>
+                        <dd>A működését nem befolyásolják a környezeti tényezők, például a szél vagy a napsütés.</dd>
+                        <dt>Megbízható</dt>
+                        <dd>Az évek során az szakemberek teljes mértékben kitapasztalták a kategórián belül lévő összes
+                            típusú erőmű működésést, így teljesen biztonságosan tudják őket üzemeltetni.</dd>
+                        <dt>Nagy hatásfok</dt>
+                        <dd>A legtöbb hőerőmű alacsony hatásfokkal tud működni, vagyis nem vesz kárba az energia.</dd>
+                    </dl>
+                </div>
+                <div id="negativlista">
+                    <h3>Negatív tulajdonságai:</h3>
+                    <dl>
+                        <dt>Környezetszennyezés</dt>
+                        <dd>A hőerőművek nagy része szennyezi a környezetét. Jó példák erre a szénerőművek, amelyek
+                            működése során rengeteg olyan anyag kerül a levegőbe (például: CO2, SO2), amelyek fokozzák
+                            az üvegházhatást.</dd>
+                        <dt>Kimerülés</dt>
+                        <dd>A hőerőművek üzemanyagai a jövőben ki fognak merülni, emiatt nem tudunk hoszzútávra tervezni
+                            velük.</dd>
+                        <dt>Hulladékkezelés</dt>
+                        <dd>A hulladékkezelés egyes erőműveknél nagy gondot tud jelenteni. Az atomerőműveknél az
+                            uránrudakat használat után a legtöbbször lerakóhelyeken elássák, vagy tárolókban tárolják.
+                            Ami így szennyezi a környezetet és később nagy problémát jelenthet az emberiségnek, mert
+                            sokáig fognak még sugározni.
+                        </dd>
+                    </dl>
+                </div>
+            </div>
         </article>
         <footer>
             <p>A weboldalt készítette: Holik Bálint és Kedves Balázs</p>
         </footer>
     </main>
 </body>
+
 </html>
