--- a/harmadik.html
+++ b/harmadik.html
@@ -13,19 +13,17 @@
 <body>
     <main>
         <header>
-
+            <h1>Előnyök és hátrányok</h1>
         </header>
         <nav>
             <a href="index.html">Főoldal</a>
             <a href="masik.html">Működése</a>
             <a href="harmadik.html">Előnyök és hátrányok</a>
         </nav>
-        <article class="bevezeto">
-            <h2>Ebben a fejezetben megtudod, hogy mik a hőerőművek előnyei és hátrányai</h2>
-        </article>
         <article>
-            <div>
-                <p id="bevezetoszoveg">Az erőművek nagyon nagy része hőerőmű. Bár nagyon sok előnye van az ilyen típusú
+            <h2>Ebben a fejezetben megtudod, hogy mik a hőerőművek előnyei és hátrányai</h2>
+            
+                <p class="twospan">Az erőművek nagyon nagy része hőerőmű. Bár nagyon sok előnye van az ilyen típusú
                     áramfejlesztő
                     üzemeknek, de nagyon sok hátránya is van. Most megtudhatod, hogy mik a pozitív és a negatív
                     tulajdonságai.</p>
@@ -41,7 +39,8 @@
                         <dd>A legtöbb hőerőmű alacsony hatásfokkal tud működni, vagyis nem vesz kárba az energia.</dd>
                     </dl>
                 </div>
-                <div id="negativlista">
+                <img src="kepek/hoeromu-kep.webp" alt="kép egy hőerőműről">
+                <div class="twospan">
                     <h3>Negatív tulajdonságai:</h3>
                     <dl>
                         <dt>Környezetszennyezés</dt>
@@ -59,7 +58,7 @@
                         </dd>
                     </dl>
                 </div>
-            </div>
+            
         </article>
         <footer>
             <p>A weboldalt készítette: Holik Bálint és Kedves Balázs</p>
