--- a/masik.html
+++ b/masik.html
@@ -1,36 +1,37 @@
 <!doctype html>
 <html lang="hu">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
-    <meta
-      name="description"
-      content="Természet órára prezentációban bemutatásra kerülnek a hőerőművek"
-    />
-    <meta name="keywords" content="Hőerőmű, hőerőművek" />
-    <title>Hőerőmű</title>
-    <link rel="stylesheet" href="stilus.css" />
-  </head>
-  <body>
-    <main>
-      <header>
-        <h1>Hőerőművek működése</h1>
-      </header>
-      <nav>
-        <a href="index.html">Ugrás a főoldalra</a>
-        <a href="harmadik.html">Előnyök és Hátrányok</a>
-      </nav>
-      <article class="bevezeto">
-        <h2>
-          Ebben a fejezetben: Megismered a hőerőművek működését, típusait és
-          felépítését
-        </h2>
-        <h3>Felépítése</h3>
-        <div class="kep">
-          <img src="kepek/Hőerőmű feléptése.jpg" alt="Széntüzelésű hőerőmű" />
-        </div>
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
+  <meta name="description" content="Természet órára prezentációban bemutatásra kerülnek a hőerőművek" />
+  <meta name="keywords" content="Hőerőmű, hőerőművek" />
+  <title>Hőerőmű</title>
+  <link rel="stylesheet" href="stilus.css" />
+</head>
+
+<body>
+  <main>
+    <header>
+      <h1>Hőerőművek működése</h1>
+    </header>
+    <nav>
+      <a href="index.html">Főoldal</a>
+      <a href="masik.html">Működése</a>
+      <a href="harmadik.html">Előnyök és hátrányok</a>
+    </nav>
+    <article class="bevezeto">
+      <h2>
+        Ebben a fejezetben: Megismered a hőerőművek működését, típusait és
+        felépítését
+      </h2>
+      <h3>Felépítése</h3>
+      <div class="kep">
+        <img src="kepek/Hőerőmű feléptése.jpg" alt="Széntüzelésű hőerőmű" />
         <p>
           <em><strong>Egy széntüzelésű hőerőmű képe</strong></em>
         </p>
+      </div>
+      <div>
         <p>Fő egységek és folyamatok az ábra alapján:</p>
         <ul>
           <li>
@@ -64,13 +65,8 @@
             feszültségre.
           </li>
         </ul>
-        <div class="kep">
-          <img
-            src="kepek/Hőerőmű feléptése2.jpg"
-            alt="hőerőmű egyszerűsített működési sémája"
-          />
-        </div>
-        <p>Egy hőerőmű egyszerűsített működési sémája</p>
+      </div>
+      <div>
         <p>
           <em><strong>Az ábra alapján a folyamat lépésről lépésre:</strong></em>
         </p>
@@ -102,32 +98,38 @@
             körfolyamat kezdődik elölről.
           </li>
         </ol>
-        <h3><strong>A hőerőművek típusai tüzelőanyag szerint:</strong></h3>
-        <ul>
-          <li>
-            <strong>Fosszilis tüzelésű erőművek:</strong> Ezek a legelterjedtebbek. Szénnel,
-            földgázzal vagy kőolajjal üzemelnek. A Wikipédia szócikke részletezi
-            a szénportüzelésű és a gázturbinás rendszerek közötti különbséget.
-          </li>
-          <li>
-            <strong>Biomassza erőművek:</strong> Megújuló energiaforrást, például fás szárú
-            növényeket, mezőgazdasági hulladékot vagy pelletet égetnek el.
-          </li>
-          <li>
-            <strong>Hulladékégető művek:</strong> A kommunális hulladék elégetésekor keletkező
-            hőt hasznosítják áramtermelésre (például a budapesti Fővárosi
-            Hulladékhasznosító Műben).
-          </li>
-          <li>
-            <strong>Atomerőművek:</strong> Bár gyakran külön kategóriaként kezeljük őket,
-            technikailag ezek is hőerőművek, mert a hőt nem égetéssel, hanem
-            maghasadással állítják elő a gőz fejlesztéséhez.
-          </li>
-        </ul>
-      </article>
-      <footer>
-        <p>A weboldalt készítette: Holik Bálint és Kedves Balázs</p>
-      </footer>
-    </main>
-  </body>
+      </div>
+      <div class="kep">
+        <img src="kepek/Hőerőmű feléptése2.jpg" alt="hőerőmű egyszerűsített működési sémája" />
+        <p>Egy hőerőmű egyszerűsített működési sémája</p>
+      </div>
+      <h3><strong>A hőerőművek típusai tüzelőanyag szerint:</strong></h3>
+      <ul class="twospan">
+        <li>
+          <strong>Fosszilis tüzelésű erőművek:</strong> Ezek a legelterjedtebbek. Szénnel,
+          földgázzal vagy kőolajjal üzemelnek. A Wikipédia szócikke részletezi
+          a szénportüzelésű és a gázturbinás rendszerek közötti különbséget.
+        </li>
+        <li>
+          <strong>Biomassza erőművek:</strong> Megújuló energiaforrást, például fás szárú
+          növényeket, mezőgazdasági hulladékot vagy pelletet égetnek el.
+        </li>
+        <li>
+          <strong>Hulladékégető művek:</strong> A kommunális hulladék elégetésekor keletkező
+          hőt hasznosítják áramtermelésre (például a budapesti Fővárosi
+          Hulladékhasznosító Műben).
+        </li>
+        <li>
+          <strong>Atomerőművek:</strong> Bár gyakran külön kategóriaként kezeljük őket,
+          technikailag ezek is hőerőművek, mert a hőt nem égetéssel, hanem
+          maghasadással állítják elő a gőz fejlesztéséhez.
+        </li>
+      </ul>
+    </article>
+    <footer>
+      <p>A weboldalt készítette: Holik Bálint és Kedves Balázs</p>
+    </footer>
+  </main>
+</body>
+
 </html>
